<resources>
    <string name="app_name">Corey</string>
    <string name="app_version" translatable="false">4.4.1</string>
    <string name="action_settings">Settings</string>
    <string name="tab_nutrition">Nutrition</string>
    <string name="tab_workout">Workout</string>
    <string name="tab_schedule">Schedule</string>
    <string name="tab_my_body">My body</string>
    <string name="tab_goals">Goals</string>
    <string name="tab_running">Running</string>
    <string name="week_placeholder">Week %d</string>
    <string name="kcal_format" translatable="false">%dkcal</string>
    <string name="kcal_format_whitespace" translatable="false">%d kcal</string>
    <string name="burned_calories">Burned calories</string>
    <string name="concat" translatable="false">%1$s %2$s</string>
    <string name="percent_placeholder_positive" translatable="false">+ %s \%</string>
    <string name="percent_placeholder_negative" translatable="false">- %s \%</string>
    <string name="bmr_full">Basal Metabolic Rate</string>
    <string name="title_running">Corey Running</string>
    <string name="help_text_running">Double tap to stop run</string>
    <string name="prefs_vibrations_key" translatable="false">sharedprefs_key_vibrations</string>
    <string name="prefs_dark_mode_key" translatable="false">prefs_dark_mode_key</string>
    <string name="prefs_category_workout">Workout</string>
    <string name="prefs_category_about">About</string>
    <string name="prefs_category_notifications">Notifications</string>
    <string name="prefs_version_title" translatable="false">Version</string>
    <string name="prefs_developer_summary" translatable="false">Shockbytes Studio (c) 2015 - 2020</string>
    <string name="prefs_developer_title">Developer</string>
    <string name="prefs_category__appearance">Appearance</string>
    <string name="prefs_launcher_icon_state_key" translatable="false">prefs_launcher_icon_state_key</string>
    <string name="prefs_dark_mode_default_value" translatable="false">system</string>
    <string name="prefs_dark_mode_title">Theme</string>
    <string name="prefs_time_countdown_key" translatable="false">sharedprefs_key_time_countdown</string>
    <string name="prefs_time_countdown_unit">Seconds</string>
    <string name="prefs_time_countdown_summary">Show countdown before training</string>
    <string name="prefs_time_countdown_title">Training countdown</string>
    <string name="prefs_vibrations_title">Vibration feedback</string>
    <string name="prefs_vibrations_summary">Vibrations indicate the end of an training</string>
    <string name="prefs_category_nutrition">Nutrition</string>
    <string name="prefs_weigh_notification_key" translatable="false">prefs_weigh_notif_key</string>
    <string name="prefs_weigh_notification_summary">Receive reminders to weigh yourself</string>
    <string name="prefs_weigh_notification_title">Weigh reminders</string>
    <string name="prefs_weigh_notification_day_key" translatable="false">prefs_weigh_notif_day_key</string>
    <string name="prefs_weigh_notification_day_default_value" translatable="false">0</string>
    <string name="prefs_weigh_notification_day_summary">Pick the day when you get notified</string>
    <string name="prefs_weigh_notification_day_title">Weigh reminder day</string>
    <string name="hint_name">Name</string>
    <string name="hint_estimated_kcal">Estimated calories</string>
    <string name="cd_imgview_time">Pick Training Time</string>
    <string name="cd_imgview_intensity">Pick intensity</string>
    <string name="cd_imgview_muscles">Pick muscles</string>
    <string name="cd_imgview_training_items">Add training items</string>
    <string name="desired_weight_card_text">until you reach your goal of %s!</string>
    <string name="desired_weight_card_text_reached">You reached your goal of %d %s!</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection available</string>
    <string name="unknown_error">Sorry, something went wrong</string>
    <string name="unknown_sign_in_response">Unknown response</string>
    <string name="default_weight_unit">kg</string>
    <string name="congrats_with_emoji">&#127881; Congratulation &#127881;</string>
    <string-array name="dreamweight_motivation">
        <item>You nearly reached it</item>
        <item>Keep going</item>
        <item>Never give up</item>
        <item>Do it, whatever it takes</item>
        <item>No excuses</item>
        <item>Keep moving</item>
        <item>Give it your all</item>
        <item>I see progress</item>
    </string-array>
    <string-array name="goal_category_names">
        <item>Body fat</item>
        <item>Weight</item>
        <item>Exercise</item>
        <item>Running</item>
        <item>Other</item>
    </string-array>
    <string name="fragment_create_workout_done">DONE</string>
    <string name="fragment_create_workout_general">GENERAL</string>
    <string name="fragment_create_workout_exercises">EXERCISES</string>
    <string name="fragment_create_workout_add_exercise">ADD EXERCISE</string>
    <string name="spinner_body_template">Choose body region</string>
    <string name="spinner_intensity_template">Choose intensity</string>
    <string name="add_time_exercise">ADD TIMING</string>
    <string name="add_exercise">ADD EXERCISE</string>
    <string name="hint_duration">Duration in minutes</string>
    <string name="validation_empty_name">Specify a workout name</string>
    <string name="validation_empty_duration">Specify workout duration</string>
    <string name="validation_empty_body_region">Select a body region</string>
    <string name="validation_empty_intensity">Select an intensity level</string>
    <string name="validation_empty_exercises">Exercises must not be empty</string>
    <string name="no_trainings">No workouts available!\nCreate one and start now!</string>
    <string name="hint_search">Search for workout</string>
    <string name="repetitions">REPETITIONS</string>
    <string name="add">Add</string>
    <string name="workout_time">WORKOUT TIME</string>
    <string name="rest_time">REST TIME</string>
    <string name="activity_workout_detail_btn_start">Start %s</string>
    <string name="duration_with_minutes">%d minutes</string>
    <string name="exercises_with_count">%d exercises</string>
    <string name="apply">Apply</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="birthday">Birthday</string>
    <string name="activity_level">Activity level</string>
    <string name="weight_unit">Weight unit</string>
    <string name="prefs_category_data">Data Access</string>
    <string name="prefs_key_gender" translatable="false">gender</string>
    <string name="prefs_key_birthday" translatable="false">birthday</string>
    <string name="prefs_key_activity_level" translatable="false">activity_level</string>
    <string name="prefs_key_weight_unit" translatable="false">weight_unit</string>
    <string name="prefs_key_firebase_access" translatable="false">firebase_access</string>
    <string name="firebase_access_title">Firebase database access</string>
    <string-array name="gender_acronyms">
        <item>m</item>
        <item>f</item>
    </string-array>
    <string-array name="activity_levels">
        <item>Sedentary</item>
        <item>Mild activity</item>
        <item>Moderate activity</item>
        <item>Heavy activity</item>
        <item>Extreme activity</item>
    </string-array>
    <string-array name="activity_levels_short">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="weight_units">
        <item>Kilogram (kg)</item>
        <item>Pounds (lb)</item>
    </string-array>
    <string-array name="weight_units_short">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string-array name="firebase_access">
        <item>Single user database - Default</item>
        <item>Scoped user database - Recommended</item>
    </string-array>
    <string-array name="firebase_access_short">
        <item>single_user_access</item>
        <item>user_scoped_access</item>
    </string-array>
    <string-array name="training_intensity">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Beast</item>
    </string-array>
    <string-array name="body_region">
        <item>Legs</item>
        <item>Core</item>
        <item>Arms</item>
        <item>Chest</item>
        <item>Full body</item>
    </string-array>
    <string-array name="workoutDaytimeReminder">
        <item>06:00</item>
        <item>08:00</item>
        <item>10:00</item>
        <item>12:00</item>
        <item>15:00</item>
        <item>18:00</item>
    </string-array>
    <string name="workout_message_title_quit">Quit workout?</string>
    <string name="workout_message_title_done">Workout done</string>
    <string name="workout_message_pos_quit">I give up</string>
    <string name="workout_message_pos_done">Done</string>
    <string name="workout_message_neg_done" translatable="false" />
    <string name="workout_message_msg_quit">Do you really want to give up?</string>
    <string name="workout_message_msg_done">Nicely done! Great job!</string>
    <string name="workout_message_neg_quit">No, never</string>
    <string name="remote_config_exercises" translatable="false">exercises</string>
    <string name="remote_config_time_exercises" translatable="false">exercises_time</string>
    <string name="dialogfragment_enter_desiredweight_title">Desired weight</string>
    <string name="dialogfragment_enter_desiredweight_neg_btn">No, later</string>
    <string name="logout">Logout</string>
    <string name="desired_weight">Desired weight</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="weight_history">My weight history</string>
    <string name="welcome">Welcome to Corey!</string>
    <string name="transition_workout_card" translatable="false">transition_workout_card</string>
    <string name="transition_workout_name" translatable="false">transition_workout_name</string>
    <string name="transition_workout_body_region" translatable="false">transition_workout_body_region</string>
    <string name="transition_workout_equipment" translatable="false">transition_workout_equipment</string>
    <string name="transition_workout_duration" translatable="false">transition_workout_duration</string>
    <string name="transition_workout_exercise_count" translatable="false">transition_workout_exercise_count</string>
    <string name="snackbar_cannot_load_workouts">Cannot load workouts</string>
    <string name="remote_config_scheduling_items" translatable="false">scheduling_items</string>
    <string name="notification_workout_title">Get up and work out!</string>
    <string name="notification_workout_msg">%s is waiting for you</string>
    <string name="notification_weigh_title">%s is weigh day</string>
    <string name="notification_weigh_msg">Last time you weighed %1$s %2$s. Go fight your weight!</string>
    <string name="my_goals">My goals</string>
    <string name="no_goals">No goals so far, create one!</string>
    <string name="menu_main_account" translatable="false">Account</string>
    <string name="anonymous_user">Anonymous User</string>
    <string name="menu_main_watch">Watch connected</string>
    <string name="settings">Settings</string>
    <string name="new_goal">New goal</string>
    <string name="hide_already_finished_goals">Hide already finished goals</string>
    <string name="show_weather_forecast">Weather forecast</string>
    <string name="notifications">Notifications</string>
    <string name="unknown_smartwatch">Unknown smartwatch</string>
</resources>