<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.preference.PreferenceCategory android:title="@string/prefs_category_nutrition">

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory android:title="@string/prefs_category_about">

        <androidx.preference.Preference
            android:icon="@drawable/ic_settings_developer"
            android:summary="@string/prefs_developer_summary"
            android:title="@string/prefs_developer_title" />

        <androidx.preference.Preference
            android:icon="@drawable/ic_settings_version"
            android:summary="@string/app_version"
            android:title="@string/prefs_version_title" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>