<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:cxt=".MainActivity">


    <item
        android:id="@+id/action_watch"
        android:title="@string/menu_main_watch"
        android:icon="@drawable/ic_watch"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_account"
        android:title="@string/menu_main_account"
        android:icon="@drawable/ic_account"
        app:showAsAction="always" >

        <menu>

            <item android:id="@+id/action_desired_weight"
                android:title="@string/desired_weight"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_logout"
                android:title="@string/logout"
                app:showAsAction="never" />

        </menu>
    </item>


    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

</menu>
