<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_training_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    android:minHeight="126dp"
    android:transitionName="@string/transition_workout_card"
    app:cardCornerRadius="2dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground">

        <android.support.v7.widget.CardView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignBottom="@+id/item_training_imgview_body_region"
            android:layout_alignEnd="@+id/item_training_imgview_body_region"
            android:layout_alignRight="@+id/item_training_imgview_body_region"
            android:transitionName="@string/transition_workout_equipment"
            app:cardBackgroundColor="@color/equipmentColor"
            app:cardCornerRadius="12dp"
            app:cardElevation="10dp">

            <ImageView
                android:id="@+id/item_training_imgview_equipment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="0.5dp" />

        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/item_training_imgview_body_region"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_margin="16dp"
            android:padding="4dp"
            android:src="@mipmap/ic_launcher"
            android:transitionName="@string/transition_workout_body_region" />

        <TextView
            android:id="@+id/item_training_txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/item_training_imgview_body_region"
            android:layout_margin="8dp"
            android:layout_toEndOf="@+id/item_training_imgview_body_region"
            android:layout_toLeftOf="@+id/item_training_imgbtn_overflow"
            android:layout_toRightOf="@+id/item_training_imgview_body_region"
            android:layout_toStartOf="@+id/item_training_imgbtn_overflow"
            android:gravity="center_vertical"
            android:padding="2dp"
            android:textAllCaps="true"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="20sp"
            android:textStyle="bold"
            android:transitionName="@string/transition_workout_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_training_imgview_body_region"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/item_training_container_duration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:transitionName="@string/transition_workout_duration">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:tint="@android:color/darker_gray"
                    app:srcCompat="@drawable/ic_clock" />

                <TextView
                    android:id="@+id/item_training_txt_duration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/item_training_container_exercises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_weight="0.5"
                android:orientation="vertical"
                android:transitionName="@string/transition_workout_exercise_count">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="2dp"
                    android:tint="@android:color/darker_gray"
                    app:srcCompat="@drawable/ic_exercise_count" />

                <TextView
                    android:id="@+id/item_training_txt_workouts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

        </LinearLayout>


        <ImageButton
            android:id="@+id/item_training_imgbtn_overflow"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:scaleType="center"
            app:srcCompat="@drawable/ic_overflow" />

    </RelativeLayout>

</android.support.v7.widget.CardView>



