<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_body_card_goals"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:alpha="0"
    tools:alpha="1"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/fragment_goals_cb_hide_finished">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:visibility="visible">

        <TextView
            android:id="@+id/fragment_body_card_goals_txt_goals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_tab_goals"
            android:drawablePadding="16dp"
            app:drawableTint="@color/colorPrimaryText"
            android:gravity="center_vertical"
            android:text="@string/my_goals"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryText" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/fragment_goals_cb_hide_finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:switchPadding="16dp"
            android:text="@string/hide_already_finished_goals"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragment_body_card_goals_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_fragment_goals_new_goal"
            style="@style/AppTheme.RoundedButton.Outlined"
            android:layout_gravity="center"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:text="@string/new_goal"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>